JAva 11, so this is possible too now.